[package]
name = "systemicons"
version = "1.0.0"
description = "With this lib you can retrive the system icon which is associated to a certain file extension. The icon will be in the .png format. Windows, macOS and Linux (GTK) are supported."
authors = [
    "Uwe Riegel <uriegel@hotmail.de>",
    "Victor Aremu <victor.olorunbumi@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/uriegel/systemicons"
readme = "README.md"

[[bin]]
name = "daemon"
path = "src/linux_gtk4/bin/main.rs"

[features]
default=[]
gtk-3 = ["gio-sys", "glib", "glib-sys", "gtk-sys", "gtk"]
gtk-4 = ["gtk4"]

exclusive = ["gtk-3", "gtk-4"]

[target.'cfg(target_os="linux" )'.dependencies]
gtk4 = { version = "0.9.2", optional = true }
gio-sys = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
glib-sys = { version = "0.18", optional = true }
gtk-sys = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winit = "0.25"
image = "0.23"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[dev-dependencies]
tokio = { version = "1.8", features = ["full"] }
warp = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

